# chroma

./: Dockerfile  chroma.js  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py
.chroma/: config.yaml
chromadb/: __init__.py  app.py  log_config.yml
