[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "chroma"
version = "0.4.22"
description = "ChromaDB"
authors = [{name = "ChromaDB", email = "hello@trychroma.com"}]
license = {text = "Apache-2.0"}
dependencies = [
    "chromadb==0.4.22",
    "pandas==2.1.4",
    "numpy==1.24.4",
    "pydantic==2.5.3",
    "fastapi==0.109.2",
    "uvicorn[standard]==0.27.1",
    "python-dotenv==1.0.0",
    "requests==2.31.0",
    "aiofiles==23.2.1",
    "python-multipart==0.0.6",
    "pyyaml==6.0.1",
    "tenacity==8.2.3",
    "typing-extensions==4.9.0",
]